--- a/ERP_Kalinkovo_Frontend/apps/forklift/package.json
+++ b/ERP_Kalinkovo_Frontend/apps/forklift/package.json
@@ -3,29 +3,27 @@
   "version": "1.1.0",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": ">=20.19.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5174"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
-    "idb-keyval": "^6.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.2",
     "uuid": "^9.0.1",
-    "vite": "5.2.10",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "vite": "5.2.10"
   }
 }
